--- a/index.html
+++ b/index.html
@@ -2868,7 +2868,7 @@
 
       <aside class="page__sidebar">
         <!-- Carousel -->
-        <div class="container" style="max-width: 400px">
+        <div style="max-width: 400px">
           <div id="myNewsCarousel" class="carousel slide" data-bs-ride="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
